--- a/Code/frontend/src/Components/WhatsnewStyles.css
+++ b/Code/frontend/src/Components/WhatsnewStyles.css
@@ -1,5 +1,5 @@
 .Wnbg{
-    background-color: rgb(20, 77, 20);
+    background-color: #c7f0c9;
     height: 400px;
     width: 100%;
     margin-top: 80px;
