--- a/Code/frontend/src/Pages/contact.css
+++ b/Code/frontend/src/Pages/contact.css
@@ -1,41 +1,36 @@
-App {
-    text-align: center;
-  }
-  .space{
-    top: 50px;
-    }
-  
-  .App-logo {
-    height: 40vmin;
-    pointer-events: none;
-  }
-  
-  @media (prefers-reduced-motion: no-preference) {
-    .App-logo {
-      animation: App-logo-spin infinite 20s linear;
-    }
-  }
-  
-  .App-header {
-    background-color: #282c34;
-    min-height: 100vh;
+.chat-container {
     display: flex;
     flex-direction: column;
+    height: 80vh;
+    max-width: 600px;
+    margin: 80px auto 0 auto;
+    background-color: #c7f0c9;
+  }
+  
+  .message-container {
+    flex: 1;
+    overflow-y: auto;
+    padding: 10px;
+    border: 1px solid #fff;
+  }
+  
+  .input-container {
+    display: flex;
+    justify-content: space-between;
     align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: white;
+    padding: 10px;
+    background-color: #f0f0f0;
   }
   
-  .App-link {
-    color: #61dafb;
+  input {
+    padding: 5px;
+    margin-right: 10px;
   }
   
-  @keyframes App-logo-spin {
-    from {
-      transform: rotate(0deg);
-    }
-    to {
-      transform: rotate(360deg);
-    }
+  button {
+    padding: 5px 10px;
+    background-color: #4caf50;
+    color: #fff;
+    border: none;
+    cursor: pointer;
   }
