--- a/Code/frontend/src/Components/WAWStyles.css
+++ b/Code/frontend/src/Components/WAWStyles.css
@@ -1,6 +1,6 @@
 .Wawbg{
-    background-color: #c7f0c9;
-    height: 300px;
+    background-color: #bd7e53;
+    height: 350px;
     width: 100%;
     margin-top: -1px;
     position: relative;
@@ -9,7 +9,7 @@
 .WawPhoto{
     background-color: #000;
     position: absolute;
-    top: 100px;
+    top: 140px;
     left: 5%;
     bottom: 10px;
     width: 200px;
@@ -17,12 +17,15 @@
 
 .title{
     text-align: center;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 50px;
+    font-style: inherit; 
     color: black;
 }
 
 .Wawdesc {
     font-size: 30px;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     color: black;
     position: flex;
     margin-left: 300px;
@@ -30,6 +33,10 @@
     margin-right: 10px;
 }
 
+.name{
+    font-family:'Brush Script MT';
+    font-style: initial;
+}
 @media screen and (max-width: 940px){
     .Wawdesc {
         font-size: 20px;
