--- a/Code/frontend/src/Pages/contact.css
+++ b/Code/frontend/src/Pages/contact.css
@@ -1,50 +1,14 @@
-body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-  background-color: #f0f0f0;
-}
-
-.container {
-  max-width: 600px;
-  margin: 20px auto;
+#messages {
+  height: 200px;
+  background-color: #eee;
+  font-size: 12px;
   padding: 20px;
-  background-color: #fff;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-.messages {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
+input {
+  width: 100%;
 }
 
-.messages li {
-  padding: 10px;
-  background-color: #e6e6e6;
-  margin: 10px 0;
-  border-radius: 8px;
-}
-
-.input-container {
-  display: flex;
-}
-
-.input-container input {
-  flex: 1;
-  padding: 10px;
-  margin-right: 10px;
-}
-
-.input-container button {
-  padding: 10px;
-  background-color: #4caf50;
-  color: #fff;
-  border: none;
-  cursor: pointer;
-  border-radius: 8px;
-}
-
-.input-container button:hover {
-  background-color: #45a049;
+#submit {
+  width: 100%;
 }
