--- a/Code/frontend/src/Pages/login.css
+++ b/Code/frontend/src/Pages/login.css
@@ -1,4 +1,3 @@
-/* LoginPage.css */
 .login-page {
     display: flex;
     height: 100vh;
@@ -9,11 +8,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #f0f0f0; /* Adjust the background color as needed */
+    background-color: #f0f0f0; 
   }
   
   .logo-container img {
-    max-width: 80%; /* Adjust the size of the logo as needed */
+    max-width: 80%; 
   }
   
   .login-form-container {
@@ -43,7 +42,7 @@
   }
   
   button {
-    background-color: #4caf50; /* Adjust the button color as needed */
+    background-color: #4caf50; 
     color: #fff;
     padding: 10px;
     border: none;
